2010-03-19  vadim  <vadim@vk.crocodile.org>

	* platform/fwsm.xml: fixed SourceForge bug 2973121: Added support
	for FWSM v4.x

	* pixAdvancedDialog.cpp: fixed SourceForge bug 2973079 "pix typo"
	(typo in a tooltip)

2010-03-18  vadim  <vadim@vk.crocodile.org>

	* fixed SourceForge bug #2972699 "fwsm/pix syslog name". The dialog
	only accepts ip address for the syslog server.

	* configlets/ipfw/script_skeleton: fixed #1335 "Empty functions in
	ipfw script". Under some circumstances shell functions in the
	generated ipfw script could have no body; /bin/sh does not like
	that.

	* newFirewallDialog::createFirewallFromTemplate: fixes #1340
	firewall object created from template does not inherit fw and host
	os settings. See the ticket and comment in the code for caveats.

	* templates.xml.in: set "stateless rule " option in template rules
	where it makes sense; turned ip forwarding and "assume fw is part
	of any" in the "web server" template object.

2010-03-16    <vadim@vk.crocodile.org>

	* RCS.cpp, FWWindow.cpp: Fixed #1334  Program failed to open data
	file on Windows if it was stored on mounted network volume.
	"File/Open" operation terminated with no error but did not load
	the file. "File/Open Recent" ended with an error message that
	quoted file path as somehting like this:
	"Volume{3c50bdba-21b0-4ea5-b52f-aa5d9755f918}/test1.fwb"
	which was obviously incorrect and the file could not be loaded.

2010-03-15  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printOptionalGlobalRules):
	fixes #1333 "Add variable management_interface for the
	automatic_rules configlet". Variable "management_address"
	renamed "ssh_management_address" to avoid ambiguity.

	* ObjectManipulator.cpp (ObjectManipulator::editSelectedObject):
	change in the behavior of double click in the tree.  Open rule set
	object in the editor if it is already opened in RuleSetView. If we
	just opened it in RuleSetView, check if the editor is visible and